--- a/Movie-Recommender-System-master/src/web/templates/web/list.html
+++ b/Movie-Recommender-System-master/src/web/templates/web/list.html
@@ -1,66 +1,73 @@
-{% extends 'web/base.html'%}
+{% extends 'web/base.html' %}
 {% block body %}
 
 <div class="container">
     <div class="col-xs-6 col-xs-offset-3">
-    	<form class="form-horizontal" role="search" method="get" action=''>
-         <div class="form-group">
-         <div class="input-group">	
-            <input type="text" class="form-control input-lg " name="q" value="{{ request.GET.q }}" placeholder= "Search Movies "/>
-            <span class='input-group-btn'>
+        <form class="form-horizontal" role="search" method="get" action=''>
+            <div class="form-group">
+                <div class="input-group">
+                    <input type="text" class="form-control input-lg" name="q" value="{{ request.GET.q }}" placeholder="Search Movies" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-info btn-lg" type="submit">
+                            <i class="fa fa-search"></i> <!-- Added search icon -->
+                            Search
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 
-             <button class='btn btn-info btn-lg' type='submit'>Search
-             </button>
-         </span>
-        </div>
-     </div>
-   </form>
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %} >{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 
- </div>
-</div>  
-    {% if messages %}
-            <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %} >{{ message }}</li>
-            {% endfor %}
-            </ul>
-    {% endif %}
-    <div class="container-fluid">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-sm-2 col-md-3">
-		<h1>Movies List</h1>
+        <div class="col-sm-6">
+            <h1 class="mt-3">Movies List</h1> <!-- Added margin-top for better spacing -->
         </div>
-        <div class="col-xs-offset-9  mt-3">
-        <a href="{% url 'recommend' %}" class="btn"><strong><h2>Get Recommendation</h2></strong></a>
+        <div class="col-sm-6 text-right mt-3">
+            <a href="{% url 'recommend' %}" class="btn btn-warning btn-lg">
+                <strong>Get Recommendations</strong>
+            </a>
         </div>
     </div>
-	</div>
-	<div class="container-fluid">
-    
+</div>
+
+<div class="container-fluid">
     <!-- Movie list -->
     <div class="row">
-            {% if movies %}
+        {% if movies %}
             {% for movie in movies %}
-                <div class="col-sm-2 col-md-2 ">
-                    <div class="thumbnail">
-                        <h4>{{movie.title}}</h4>
+                <div class="col-sm-3 col-md-2 mt-4"> <!-- Added margin-top for better spacing -->
+                    <div class="card">
                         <a href="{% url 'detail' movie.id %}">
-                            <img src="{{ movie.movie_logo.url}}" class="img-responsive">
+                            <img src="{{ movie.movie_logo.url }}" class="card-img-top img-fluid rounded" alt="{{ movie.title }}"> <!-- Made image responsive with rounded corners -->
                         </a>
-                        <h5>{{movie.genre}}</h5>
-                        <div class="caption">
-
-                            <!-- View Details -->
-                            <a href="{% url 'detail' movie.id %}" class="btn btn-primary btn-sm" role="button">Give Rating</a>
-
-                                        
+                        <div class="card-body">
+                            <h5 class="card-title text-center">{{ movie.title }}</h5>
+                            <p class="card-text text-center text-muted">{{ movie.genre }}</p> <!-- Added muted text style for genre -->
+                            <div class="text-center">
+                                <a href="{% url 'detail' movie.id %}" class="btn btn-primary btn-sm">
+                                    <i class="fa fa-star"></i> Give Rating <!-- Added star icon -->
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
-                {% endif %}
-        </div>
-    
+            {% endfor %}
+        {% else %}
+            <div class="col-12">
+                <p class="text-center">No movies found.</p> <!-- Added message for no movies -->
+            </div>
+        {% endif %}
+    </div>
 </div>
 
 {% endblock %}
